# umi-realsense

./: .gitignore  README.md
aruco/: calibrate_cam_tcp.py  calibrate_slam_tag.py  detect_aruco.py  live_aruco_preview.py  transform_to_world.py
calibration/: README.md  T_cam_tcp_d405.json  T_cam_tcp_d435i.json  build_openicc.sh  calibrate_d435i.sh  db3_to_openicc.py  dump_factory_calib.py  factory_calib_317622072663.json  factory_calib_333422305423.json  factory_calib_409122272923.json  run_openicc.sh  setup_openicc_deps.sh  tx_slam_tag_d405.json  tx_slam_tag_d435i_envmap.json  tx_slam_tag_d435i_envmap2.json  tx_slam_tag_d435i_stereo.json
calibration/patches/: 0001-openicc-fixes.patch
configs/: aruco_config.yaml
configs/cameras/: d405.yaml  d405_slam.yaml  d435i.yaml  d435i_slam.yaml  d455.yaml
dataset/: clean_episode.py  extract_episode.py  log_rerun.py  plot_episode.py  plot_episode_interactive.py  plot_map.py  plot_trajectory_slam.py
docs/: d405_vs_d435i_accuracy.md  d435i_stereo_vs_imu.md  demo_collection_findings.md
env/: setup_umi_env.sh
recording/: bag_to_folder.py  record.py
slam/: compare_trajectories.py  run_slam.sh
slam/configs/: d405_localization.yaml  d405_mapping.yaml  d405_stereo.yaml  d435i_localization.yaml  d435i_mapping.yaml  d435i_stereo_inertial.yaml
slam/offline_driver/: CMakeLists.txt  build.sh  stereo_inertial_db3.cc
slam/patches/: 0001-orbslam3-d435i-ubuntu2204.patch  apply_patches.sh
